--- a/src/index.html
+++ b/src/index.html
@@ -3,34 +3,103 @@
 <head>
 <meta charset=utf-8/>
 <title>Lab 1. Introduction to HTML5 and HLS</title>
-  
-  <!--
-  Embed needed js libraries for video player. Note, libraries needs to be hosted on your server, under /js folder.
-   -->
-  <!--
-  Location for CSS if needed. Note, cascade style sheets needs to be hosted on your server, under /css folder.
-  -->
-   
 
+   <link href="https://unpkg.com/video.js@6.7.1/dist/video-js.css" rel="stylesheet">
+  <script src="https://unpkg.com/video.js@6.7.1/dist/video.js"></script>
+  <script src="./js/control.js"></script>
+  <script src="https://unpkg.com/@videojs/http-streaming@0.9.0/dist/videojs-http-streaming.js"></script>
 
 </head>
 <body>
-  <h1>My first HLS player</h1>
+  <h1>HLS player</h1>
   
   <!--
   location for your player window
   -->
   
-	<button type="button">Play</button>
-	<button type="button">Pause</button>
-	<button type="button">Stop</button>
-	<button type="button">Jump to 5 sec forward</button>
-	<button type="button">Jump to 5 sec backwards</button>	
+  <video-js id="first_video" class="vjs-default-skin" controls preload="auto" width="640" height="360">
+    <source src="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8" type="application/x-mpegURL">
+  </video-js>
+  
+	
+	<script> 
+	
+	var myPlayer = videojs('first_video');
+	function Play() 
+	{
+		myPlayer.play();
+	}
+	function pauseVideo() 
+	{
+		myPlayer.pause();
+	}
+	function stopVideo()
+	{
+		myPlayer.pause();
+		myPlayer.currentTime(0);
+	}
+	function skip5sec()
+	{
+		myPlayer.currentTime(myPlayer.currentTime()+5);
+	}
+	function back5sec()
+	{
+		myPlayer.currentTime(myPlayer.currentTime()-5);
+	}
+	function LoadURL1() 
+	{
+		var Url_1 = document.getElementById("PlayFirstURL").value;
+		
+		myPlayer.src({type: "application/x-mpegURL",src: Url_1});
+	  
+		myPlayer.play();
+
+	}
+	function LoadURL2() 
+	{
+		var Url_2 = document.getElementsByName("secondURL")[0].value;
+		
+		myPlayer.src({type: "application/x-mpegURL",src: Url_2});
+	  
+		myPlayer.play();
+
+	}
+	function LoadURL3() 
+	{
+		var Url_3 = document.getElementsByName("thirdURL")[0].value;
+		
+		myPlayer.src({type: "application/x-mpegURL",src: Url_3});
+	  
+		myPlayer.play();
+
+	}
+	function shufflePlaylist()
+	{
+	
+	//myPlayer.src = shuffle(myPlayer.src([
+	//{type: "application/x-mpegURL",src: Url_1},
+	//{type: "application/x-mpegURL",src: Url_2},
+	//{type: "application/x-mpegURL",src: Url_3}
+	//]));
+	
+	myPlayer.play();
+	
+	}
+	
+	</script>
+	
+	<button type="button" onclick="Play()">Play</button>
+	<button type="button" onclick="pauseVideo()">Pause</button>
+	<button type="button" onclick="stopVideo()">Stop</button>
+	<button type="button" onclick="skip5sec()">Jump to 5 sec forward</button>
+	<button type="button" onclick="back5sec()">Jump to 5 sec backwards</button>	
 	
 	<p>Playlist</p>
 	
-	<input type="text" name="url1" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button">Load</button><br>
-	<input type="text" name="url2" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button">Load</button><br>
-	<button type="button">Shuffle</button>
+	<input type="text" id="PlayFirstURL" name="firstURL" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button" onclick="LoadURL1()">Load</button><br>
+	<input type="text" id="PlaySecondURL" name="secondURL" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button" onclick="LoadURL2()">Load</button><br>
+	<input type="text" id="PlayThirdURL" name="thirdURL" size="100" value="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8"><button type="button" onclick="LoadURL3()">Load</button><br>
+	
+	<button type="button" onclick="shufflePlaylist()">Shuffle</button>
 </body>
 </html>
