--- a/src/index.html
+++ b/src/index.html
@@ -76,12 +76,9 @@
 	function shufflePlaylist()
 	{
 	
-	//myPlayer.src = shuffle(myPlayer.src([
-	//{type: "application/x-mpegURL",src: Url_1},
-	//{type: "application/x-mpegURL",src: Url_2},
-	//{type: "application/x-mpegURL",src: Url_3}
-	//]));
-	
+	var playList =[document.getElementById("PlayFirstURL").value, document.getElementsByName("secondURL")[0].value, "document.getElementsByName("thirdURL")[0].value"];
+	playList.sort(function(a,b){return 0.5 - Math.random()});
+	myPlayer.src({type: "application/x-mpegURL",src: playList[0]});
 	myPlayer.play();
 	
 	}
